Issue: When artifacts are moved/copied from one artifact type to another type, it is not checked whether the 'required' attributes in the destination type are supplied with a value.
Changes :
*src/java/org/tigris/scarab/om/Issue.java
 #getUnsetRequiredAttrs(): New method implemented to list required attributes in destination module / issue type that are not supplied with a
value when an artifact was moved/copied.

*src/i18n/ScarabBundle_en_US.properties
 IssueCannotBeCopied: New L10N resource added to alert the user that issues cannot be moved/copied since some of the "required" attributes
in the destination module / issue type have not been supplied with a value.
 AttributesThatReqdInDestinationIssueType: New L10N resource added to display value in the tab in "Copy artifact. Step 2: map attributes" page.

*src/templates/screens/MoveIssue2.vm
 A new tab added to display attributes that require a value in destination artifact type and suppressed the move and copy buttons.

Issue : PCN21997
Committed by : arun@collab.net
Reviewed by  : elicia@collab.net

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -483,6 +483,8 @@ DestinationModuleLacksIssueType=The destination module does not have this issue 
 DidNotCopyAttributes=The following attributes and values did not match the artifact type "{0}":
 DidNotCopyAttributesFromArtifact=The following attributes and values from artifact "{0}" did not match the artifact type "{1}":
 SelectIssueToMove=Please select an issue to move.
+IssueCannotBeCopied={0}(s) cannot be copied / moved since some of the 'required' attributes in the destination {1} / {2} have not been supplied with a value.
+AttributesThatReqdInDestinationIssueType=Attributes that require a value in the destination {0} / {1}
 
 ##IssueList
 ExportResultsTo=Export results to:
