- Couple bug fixes in PatternParser.
- PatternLayout now recognized the pattern words '"logger", "class",
  "file", "line", "message", "level", "relative", "thread"
  "ndc", "mdc" which aare synonyms respectively for 'c', 'C', 'F', 'L',
  'p', 'r', 't', 'x' and 'X'.

--- a/docs/HISTORY
+++ b/docs/HISTORY
@@ -33,6 +33,9 @@
    type (like XML for example).   
 
  - Fixed bug #23096. NullAppender getInstance method is now declared as a static.  
+
+ - Fixed bug #10706. The %X pattern without a key no longer causes a NullPointer 
+   exception, 
  
  February 19th, 2003
  
