--- a/Eclipse UI/org/eclipse/ui/internal/progress/messages.properties
+++ b/Eclipse UI/org/eclipse/ui/internal/progress/messages.properties
@@ -28,3 +28,6 @@ AnimationItem.HoverHelp=Double click to open Progress View
 StatusLineProgressListener.Refresh=Status Line Update
 ProgressFeedbackManager.OpenFeedbackJob=Open Feedback Dialog
 ProgressFeedbackDialog.DialogTitle=Jobs Awaiting Progress
+
+MonitorProvider.noNameDoneMessage = {0}% done
+MonitorProvider.doneMessage = {0}: {1}% done
