--- a/Eclipse UI/org/eclipse/ui/internal/progress/messages.properties
+++ b/Eclipse UI/org/eclipse/ui/internal/progress/messages.properties
@@ -29,5 +29,7 @@ StatusLineProgressListener.Refresh=Status Line Update
 ProgressFeedbackManager.OpenFeedbackJob=Open Feedback Dialog
 ProgressFeedbackDialog.DialogTitle=Jobs Awaiting Progress
 
-MonitorProvider.noNameDoneMessage = {0}% done
-MonitorProvider.doneMessage = {0}: {1}% done
+
+MonitorProvider.oneValueMessage = {0}: {1}% done
+MonitorProvider.twoValueMessage = {0}: {1}: {2}% done
+MonitorProvider.twoValueUnknownMessage = {0}: {1}
