--- a/res/org/columba/mail/i18n/menu/composer.properties
+++ b/res/org/columba/mail/i18n/menu/composer.properties
@@ -54,3 +54,5 @@ menu_format_center_justify = Center
 menu_format_center_justify_tooltip = Center Justify Selected Text
 menu_format_style = Style
 menu_format_justification = Justify
+menu_format_break = Insert Break
+menu_format_break_tooltip = Insert a line break
