[feature]improved headerlist fetching, list is now fetched in steps of 100 messages - this solves the "too long client command" problems, we had with very large mailboxes. Also, the parser only uses fetch responses and so won't get confused by non-fetch responses like flags update, etc., UIDs are now correctly associated to their respective headers

--- a/res/org/columba/mail/i18n/statusbar/message.properties
+++ b/res/org/columba/mail/i18n/statusbar/message.properties
@@ -22,7 +22,7 @@ fetch_header_list=Fetching header list...
 
 fetch_folder_list=Fetching folder list...
 
-fetch_headers=Fetching {0}/{1} headers
+fetch_headers=Fetching headers...
 
 search_in=Searching in {0}...
 
