[intern] removed the mnemonic i18n string, replaced with custom classes which use a & character to specific the position in the default label

--- a/res/org/columba/mail/i18n/dialog/account.properties
+++ b/res/org/columba/mail/i18n/dialog/account.properties
@@ -15,12 +15,9 @@ type=Type
 # configframe
 standard=Default
 dialog_title=Account Preferences
-addaccount=Add...
-addaccount_mnemonic=a
-removeaccount=Remove
-removeaccount_mnemonic=r
-editsettings=Edit...
-editsettings_mnemonic=e
+addaccount=&Add...
+removeaccount=&Remove
+editsettings=&Edit...
 name=name
 index=index: 
 add=add
@@ -29,24 +26,17 @@ accountname=Account Name:
 add_popserver_12=add popserver
 
 # identity panel
-identity_accountname=Account Name:
-identity_accountname_mnemonic=a
+identity_accountname=&Account Name:
 account_information=Account Information
-defaultaccount=Make this my default account
-defaultaccount_mnemonic=d
+defaultaccount=Make this my &default account
 identity=Identity
 needed_information=Needed Information
-yourname=Your Name:
-yourname_mnemonic=n
-address=EMail-Address:
-address_mnemonic=e
+yourname=Your &Name:
+address=EMail-Addr&ess:
 optional_information=Optional Information
-replytoaddress=Reply-to Address:
-replytoaddress_mnemonic=r
-organisation=Organisation:
-organisation_mnemonic=o
-attachthissignature=Attach this signature:
-attachthissignature_mnemonic=s
+replytoaddress=&Reply-to Address:
+organisation=&Organisation:
+attachthissignature=Attach this &signature:
 namelabel=You have to enter a name for this account!
 addresslabel=You have to enter your address!
 
@@ -61,64 +51,46 @@ Expunge_Inbox_on_Exit=Expunge Inbox on Exit
 Empty_Trash_on_Exit=Empty Trash on Exit
 
 # incoming server panel
-server_type=Server Type:
-server_type_mnenomic=t
+server_type=Server &Type:
 login=Login:
 login_mnemonic=l
 password=Password:
-host=Host:
-host_mnemonic=h
-port=Port:
-port_mnemonic=p
-authentication_type=Authentication Type:
-authentication_type_mnemonic=a
+host=&Host:
+port=&Port:
+authentication_type=&Authentication Type:
 type=Type
 configuration=Configuration
 security=Security
-store_password_in_configuration_file=Store password in configuration file
-store_password_in_configuration_file_mnemonic=c
-use_SSL_for_secure_connection=Use SSL for secure connection
-use_SSL_for_secure_connection_mnemonic=s
+store_password_in_configuration_file=Store password in &configuration file
+use_SSL_for_secure_connection=Use &SSL for secure connection
 You_have_to_enter_a_host_name=You have to enter a host name!
 You_have_to_enter_a_login_name=You have to enter a login name!
-use_default_account_settings=use default account settings
-use_default_account_settings_mnemonic=d
+use_default_account_settings=use &default account settings
 
 # outgoing server panel
-host=Host:
-host_mnemonic=h
-port=Port:
-port_mnemonic=p
-server_needs_authentification=Server needs authentification
-server_needs_authentification_mnemonic=a
+host=&Host:
+port=&Port:
+server_needs_authentification=Server needs &authentification
 POP-before-SMTP_(SMTP-AFTER-POP)=POP-before-SMTP (SMTP-AFTER-POP)
 Always_use_name_and_password_(ESMTP)=Always use name and password (ESMTP)
 Bcc_to_yourself=Bcc to yourself
 Bcc_another_address=Bcc another address:
-store_password_in_configuration_file=Store password in configuration file
-store_password_in_configuration_file_mnemonic=c
-use_SSL_for_secure_connection=Use SSL for secure connection
-use_SSL_for_secure_connection_mnemonic=s
+store_password_in_configuration_file=Store password in &configuration file
+use_SSL_for_secure_connection=Use &SSL for secure connection
 You_have_to_enter_a_host_name=You have to enter a host name!
 You_have_to_enter_a_login_name=You have to enter a login name!
 enable_interval_message_checking=Enable interval message checking
 check_for_new_messages_every=Check for new messages every
 minutes=minutes
-play_sound_when_new_messages_arrive=Play sound when new messages arrive
-play_sound_when_new_messages_arrive_mnemonic=p
-automatically_download_new_messages=Automatically download new messages
-automatically_download_new_messages_mnemonic=a
-leave_messages_on_server=Leave messages on server
-leave_messages_on_server_mnemonic=l
-limit_message_download_to=Limit Message download to (KB)
-limit_message_download_to_mnemonic=m
-exclude_from_fetch_all=Exclude from Fetch All
-exclude_from_fetch_all_mnemonic=e
+play_sound_when_new_messages_arrive=&Play sound when new messages arrive
+automatically_download_new_messages=&Automatically download new messages
+leave_messages_on_server=&Leave messages on server
+limit_message_download_to=Limit &Message download to (KB)
+exclude_from_fetch_all=&Exclude from Fetch All
 
 # imap attribut panel
 enable_interval_message_checking_mnemonic=i
-apply_filter=Automatically apply filter on Inbox
-apply_filter_mnemonic=f
+apply_filter=Automatically apply &filter on Inbox
 
 # receive-options-panel
 automatic_mailchecking=Automatic mail checking
