Improved calculation message

--- a/Eclipse UI/org/eclipse/ui/internal/messages.properties
+++ b/Eclipse UI/org/eclipse/ui/internal/messages.properties
@@ -1493,7 +1493,7 @@ DecorationScheduler.CalculationJobName=Decoration Calculation
 DeferredTreeContentManager.FetchChildrenJob=Fetch Children
 DeferredTreeContentManager.AddChildrenJob=Add Children
 DecorationScheduler.UpdatingTask=Updating
-DecorationScheduler.CalculatingTask=Calculating
+DecorationScheduler.CalculatingTask=Calculating Decorations
 DecorationScheduler.DecoratingSubtask=Decorating {0}
 FilteredList.TableUpdateJob=FilteredList Table Updater Job
 FilteredList.ListUpdateJob=Filtered List Update job
