[feature] Added left/center/right alignment (justify) to html composer

--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -11,6 +11,7 @@ menu_message = Message
 
 menu_format = Format
 menu_format_style = Style
+menu_format_justification = Justify
 
 menu_folder_newfolder = New Subfolder...
 menu_folder_newvirtualfolder = New Virtual Subfolder...
