[intern] code clean-up

--- a/res/org/columba/mail/i18n/dialog/composer.properties
+++ b/res/org/columba/mail/i18n/dialog/composer.properties
@@ -1,10 +1,8 @@
 
 composerview_title=Compose message...
-subject=Subject:
-subject_mnemonic=s
-identity=Identity:
-identity_mnemonic=i
-priority=Priority:
+subject=&Subject:
+identity=&Identity:
+priority=&Priority:
 statusbar_label=Composer
 no_recipients_found=No recipients specified\!
 highest=Highest
@@ -13,7 +11,6 @@ normal=Normal
 low=Low
 lowest=Lowest
 no_subject=no subject
-priority_mnemonic=p
 composer_no_subject=(Subject)
 style=Style:
 size=Size:
