[feature] Added option for sending html messages as either single html parts or as multipart/alternative (option in mail options dialog). Also added missing internationalization to mail options dialog

--- a/res/org/columba/mail/i18n/dialog/general.properties
+++ b/res/org/columba/mail/i18n/dialog/general.properties
@@ -37,3 +37,14 @@ overwrite_main_font=Overwrite Look and Feel font settings
 choose=Choose...
 
 text_font=Text font:
+
+empty_trash=Empty trash on exit
+enable_smilies=Display emoticons as graphics
+color_quoted_text=Color quoted text
+send_html_multipart=Send html with alternative text part
+forward_as=Forward message as
+forward_as_attachment=Attachment
+forward_as_quoted=Quoted
+choose_text_color=Choose Quoted Text Color
+general_options=General Options
+composing_messages=Composing Messages
