More imports cleaned (the wildcard for example)

--- a/src/examples/WEB-INF/classes/LocalStrings_fr.properties
+++ b/src/examples/WEB-INF/classes/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-# $Id: LocalStrings_fr.properties,v 1.3 2001/03/07 15:06:59 larryi Exp $
+# $Id: LocalStrings_fr.properties,v 1.4 2003/09/29 07:39:48 hgomez Exp $
 
 # Default localized resources for example servlets
 # This locale is fr_FR
@@ -12,11 +12,11 @@ requestinfo.label.protocol=Protocole:
 requestinfo.label.pathinfo=Info de chemin:
 requestinfo.label.remoteaddr=Adresse distante:
 
-requestheader.title=Exemple d''information sur les entête de requête
+requestheader.title=Exemple d''information sur les entêtes de requête
 
 requestparams.title=Exemple de requête avec paramêtres
 requestparams.params-in-req=Paramêtres dans la requête:
-requestparams.no-params=Pas de paramêtre, merci dans saisir quelqu'uns
+requestparams.no-params=Pas de paramêtre, merci dans saisir quelques un
 requestparams.firstname=Prénom:
 requestparams.lastname=Nom:
 
