--- a/src/share/org/apache/tomcat/resources/LocalStrings_fr.properties
+++ b/src/share/org/apache/tomcat/resources/LocalStrings_fr.properties
@@ -1,11 +1,11 @@
-# $Id: LocalStrings_fr.properties,v 1.6 2002/10/31 09:26:42 hgomez Exp $
+# $Id: LocalStrings_fr.properties,v 1.7 2003/09/29 07:41:10 hgomez Exp $
 #
 
 # Localized strings for package org.apache.tomcat.core
 # This is the French locale and is fr_FR
 
 # StaticInterceptor
-defaultservlet.directorylistingfor=Directory Listing for:
+defaultservlet.directorylistingfor=Liste du répertoire pour:
 defaultservlet.upto=Jusqu''à:
 defaultservlet.subdirectories=Sous-Dossiers:
 defaultservlet.files=Fichiers:
