First pass of generic busy support

--- a/Eclipse UI/org/eclipse/ui/internal/progress/messages.properties
+++ b/Eclipse UI/org/eclipse/ui/internal/progress/messages.properties
@@ -29,7 +29,10 @@ StatusLineProgressListener.Refresh=Status Line Update
 ProgressFeedbackManager.OpenFeedbackJob=Open Feedback Dialog
 ProgressFeedbackDialog.DialogTitle=Jobs Awaiting Progress
 
+ProgressManager.openJobName=Open progress monitor
+
 
 MonitorProvider.oneValueMessage = {0}: {1}% done
 MonitorProvider.twoValueMessage = {0}: {1}: {2}% done
 MonitorProvider.twoValueUnknownMessage = {0}: {1}
+ProgressFeedbackManager.invalidThreadMessage=requestInUI() should not be thrown in the UI Thread
