Issue 2106 issue 2075 corrected 'z' for 's'

--- a/src_new/org/argouml/i18n/label.properties
+++ b/src_new/org/argouml/i18n/label.properties
@@ -1,4 +1,4 @@
-# $Id: label.properties,v 1.9 2003/09/02 20:18:46 jjones Exp $
+# $Id: label.properties,v 1.10 2003/09/29 20:52:10 alexb Exp $
 # Copyright (c) 2003 The Regents of the University of California. All
 # Rights Reserved. Permission to use, copy, modify, and distribute this
 # software and its documentation without fee, and without a written
@@ -75,7 +75,7 @@ label.dependency = Dependency
 label.deployment-diagram = Deployment Diagram
 label.derived = Derived:
 label.discriminator = Discriminator:
-label.do-activity = Do Activity:
+label.do-activity=Do Activity:
 label.documentation-pane = Documentation Pane
 label.edem = Report Usage Statistics
 label.effect = Effect:
@@ -105,7 +105,7 @@ label.includes = Includes:
 label.incoming = Incoming:
 label.initial-value = Initial Value:
 label.interaction = Interaction:
-label.internal-transitions = Internal transitions:
+label.internal-transitions=Internal transitions:
 label.language = Language:
 label.leaf = Leaf
 label.links = Links:
