--- a/src_new/org/argouml/i18n/menu.properties
+++ b/src_new/org/argouml/i18n/menu.properties
@@ -1,4 +1,4 @@
-# $Id: menu.properties,v 1.3 2003/09/15 15:31:20 jjones Exp $
+# $Id: menu.properties,v 1.4 2003/09/29 20:52:10 alexb Exp $
 # Copyright (c) 2003 The Regents of the University of California. All
 # Rights Reserved. Permission to use, copy, modify, and distribute this
 # software and its documentation without fee, and without a written
@@ -217,3 +217,5 @@ menu.popup.add-signal = Signal...
 menu.popup.add-to-diagram = Add to Diagram
 menu.popup.add-usecase = Use Case...
 menu.popup.remove = Remove
+
+misc.languages-de=German
