[feature]added a better security indicator

--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -246,16 +246,18 @@ filtertoolbar_advanced_tooltip=Opens the Search dialog
 
 filtertoolbar_clear_tooltip=Resets all filters
 
-security_encrypt_success=Message was encrypted successfully
-
-security_encrypt_fail=Message encryption failed
-
-security_verify_success=Message was verified successfully
-
-security_verify_fail=Message verification failed
-
-security_verify_nokey=You don't have the right key to verify this message
-
 menu_message_opennew=Open Message in new Window
 
 menu_message_opennew_tooltip=Opens the selected message in a separate window
+
+###### pgp security indicator
+
+security_encrypt_success=Message was encrypted successfully!
+
+security_encrypt_fail=Message encryption failed!
+
+security_verify_success=Message was verified successfully!
+
+security_verify_fail=Message verification failed!
+
+security_verify_nokey=You don't have the public key of this sender!
