*** empty log message ***

--- a/Eclipse UI/org/eclipse/ui/internal/messages.properties
+++ b/Eclipse UI/org/eclipse/ui/internal/messages.properties
@@ -1498,3 +1498,15 @@ DecorationScheduler.DecoratingSubtask=Decorating {0}
 FilteredList.TableUpdateJob=FilteredList Table Updater Job
 FilteredList.ListUpdateJob=Filtered List Update job
 FilteredList.UpdateTask=Running Updates
+
+# A list of special key strokes that are processed by the widget before
+# being processed by the global key binding architecture.  The format of
+# the value is a parseable KeySequence.  Please test thoroughly if you
+# change this value from "ESC".
+OutOfOrderKeys=ESC
+
+# A list of special key strokes that are processed by the widget before
+# being processed by the global key binding architecture.  The format of
+# the value is a parseable KeySequence.  Please test thoroughly if you
+# change this value from "ESC".
+OutOfOrderKeys=ESC
