--- a/src_new/org/argouml/i18n/menu.properties
+++ b/src_new/org/argouml/i18n/menu.properties
@@ -1,4 +1,4 @@
-# $Id: menu.properties,v 1.4 2003/09/29 20:52:10 alexb Exp $
+# $Id: menu.properties,v 1.5 2003/10/01 05:51:00 linus Exp $
 # Copyright (c) 2003 The Regents of the University of California. All
 # Rights Reserved. Permission to use, copy, modify, and distribute this
 # software and its documentation without fee, and without a written
@@ -48,7 +48,7 @@ menu.item.new.mnemonic = N
 menu.item.open.mnemonic = O
 menu.item.save.mnemonic = S
 menu.item.saveas.mnemonic = A
-menu.item.revert-to-saved = Revert to Saved
+menu.item.revert-to-saved.mnemonic = Revert to Saved
 menu.item.import.mnemonic = I
 menu.item.print.mnemonic = P
 menu.item.pagesetup.mnemonic = u
@@ -67,7 +67,7 @@ menu.item.select-all.mnemonic = A
 menu.item.navigate-back.mnemonic = B
 menu.item.navigate-forward.mnemonic = F
 menu.item.select-next.mnemonic = N
-menu.item.select-previous.mnemoic = V
+menu.item.select-previous.mnemonic = V
 menu.item.invert-selection.mnemonic = I
 
 menu.item.cut.mnemonic = t
@@ -138,10 +138,10 @@ menu.item.align-to-grid.mnemonic = G
 menu.distribute = Distribute
 menu.distribute.mnemonic = D
 
-menu.item.distribute-horizontal-spacing = H
-menu.item.distribute-horizontal-centers = O
-menu.item.distribute-vertical-spacing = V
-menu.item.distribute-vertical-centers = E
+menu.item.distribute-horizontal-spacing.mnemonic = H
+menu.item.distribute-horizontal-centers.mnemonic = O
+menu.item.distribute-vertical-spacing.mnemonic = V
+menu.item.distribute-vertical-centers.mnemonic = E
 
 menu.reorder = Reorder
 menu.reorder.mnemonic = R
@@ -165,8 +165,8 @@ menu.item.toggle-auto-resize.mnemonic = Z
 menu.layout = Layout
 menu.layout.mnemonic = L
 
-menu.item.layout-automatic = a
-menu.item.layout-incremental = i
+menu.item.layout-automatic.mnemonic = a
+menu.item.layout-incremental.mnemonic = i
 
 # ----------------------menu Generation
 menu.generation = Generation
