--- a/Eclipse UI/org/eclipse/ui/internal/progress/messages.properties
+++ b/Eclipse UI/org/eclipse/ui/internal/progress/messages.properties
@@ -6,6 +6,7 @@ JobInfo.Waiting = WAITING: {0}
 JobInfo.Sleeping = SLEEPING: {0}
 JobInfo.System = {0} (SYSTEM)
 JobInfo.Error = ERROR: {0} : {1}
+JobInfo.Blocked = BLOCKED: {0} : {1}
 Error = Error 
 UIJob.displayNotSet=Display must be set
 DeferredTreeContentManager.NotDeferred=Not an IDeferredWorkbenchAdapter
